tests/baselines/reference/moduleCrashBug1.errors.txt
==== tests/cases/compiler/moduleCrashBug1.ts (1 errors) ====
    module _modes {
     export interface IMode {
      
     }
     
     class Mode {
      
     }
    }
    
    //_modes. // produces an internal error - please implement in derived class
    
    module editor {
     import modes = _modes;
    
    }
    
    var m : _modes;
            ~~~~~~
!!! moduleCrashBug1.ts(18,9): error TS4022: Type reference cannot refer to container '_modes'.
    
    
    